--- a/package.json
+++ b/package.json
@@ -1,37 +1,34 @@
 {
-    "name": "amplify-vue-template",
-    "version": "0.0.0",
-    "private": true,
-    "type": "module",
-    "scripts": {
-      "dev": "vite",
-      "build": "run-p type-check \"build-only {@}\" --",
-      "preview": "vite preview",
-      "build-only": "vite build",
-      "type-check": "vue-tsc --build --force"
-    },
-    "dependencies": {
-      "aws-amplify": "^6.6.6",
-      "axios": "^1.7.9",
-      "marked": "^15.0.7",
-      "vue": "^3.5.13",
-      "vue-router": "^4.5.0"
-    },
-    "devDependencies": {
-      "@aws-amplify/backend": "^1.5.0",
-      "@aws-amplify/backend-cli": "^1.2.9",
-      "@tsconfig/node20": "^20.1.4",
-      "@types/node": "^20.12.5",
-      "@vitejs/plugin-vue": "^5.0.4",
-      "@vue/tsconfig": "^0.5.1",
-      "aws-cdk": "^2.137.0",
-      "aws-cdk-lib": "^2.137.0",
-      "constructs": "^10.3.0",
-      "esbuild": "^0.20.2",
-      "npm-run-all2": "^6.1.2",
-      "tsx": "^4.7.2",
-      "typescript": "^5.4.5",
-      "vite": "^5.4.10",
-      "vue-tsc": "^2.0.11"
-    }
+  "name": "amplify-vue-template",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build --force"
+  },
+  "dependencies": {
+    "axios": "^1.7.9",
+    "marked": "^15.0.7",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "@tsconfig/node20": "^20.1.5",
+    "@types/node": "^20.12.5",
+    "@types/vue": "^2.0.0",
+    "@types/vue-router": "^2.0.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/tsconfig": "^0.5.1",
+    "constructs": "10.1.161",
+    "esbuild": "^0.20.2",
+    "npm-run-all2": "^6.1.2",
+    "tsx": "^4.7.2",
+    "typescript": "^5.4.5",
+    "vite": "^5.4.14",
+    "vue-tsc": "^2.0.11"
   }
+}
