--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "amplify-vue-template",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force"
+    "type-check": "vue-tsc --build --force",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "dev": "vite",
+    "start": "vite"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.7.9",
     "marked": "^15.0.7",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuetify": "^3.8.8"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.5",
@@ -24,11 +27,11 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
     "constructs": "10.1.161",
-    "esbuild": "^0.25.2",
+    "esbuild": "^0.20.2",
     "npm-run-all2": "^6.1.2",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5",
-    "vite": "^6.3.4",
+    "vite": "^5.4.14",
     "vue-tsc": "^2.0.11"
   }
 }
