--- a/package.json
+++ b/package.json
@@ -2,19 +2,27 @@
   "name": "amplify-vue-template",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
+    "dev": "vite",
+    "start": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
     "build-only": "vite build",
+    "preview": "vite preview",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "dev": "vite",
-    "start": "vite"
+    "api": "cd api && PATH=\"/opt/homebrew/opt/node@20/bin:$PATH\" npm start",
+    "migrate": "cd scripts && npm run migrate",
+    "setup": "./setup.sh"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.12.0",
     "marked": "^15.0.7",
+    "mongodb": "^6.20.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
     "vuetify": "^3.8.8"
