--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,6 +1,20 @@
 {
+  "platform": {
+    "apiRuntime": "node:20"
+  },
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/favicon.ico", "/images/*", "/css/*"]
+    "exclude": ["/favicon.ico", "/images/*", "/css/*", "/api/*"]
+  },
+  "routes": [
+    {
+      "route": "/api/*",
+      "allowedRoles": ["anonymous"]
+    }
+  ],
+  "responseOverrides": {
+    "404": {
+      "rewrite": "/index.html"
+    }
   }
 }
